--- a/src/EPR.Web/wwwroot/css/site.css
+++ b/src/EPR.Web/wwwroot/css/site.css
@@ -38,7 +38,7 @@ body {
   font-size: 12px;
   line-height: 1.6;
   color: var(--dark-text);
-  background-color: var(--light-bg);
+  background-color: #fff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
